version 0.?.?   - UNRELEASED

  * Fixed manpage installation path to be FHS compliant
  * Speed up IMAP archiving with the --quiet option
  * Ported the manpage from SGML to XML
  * Fix test suite failures with Python 2.7 by letting the test suite method
    FixedGzipFile.seek() return the new absolute file position.
    Closes: #3314293.

version 0.8.2   - 16 October 2010

  * IMAP: don't prepend NAMESPACE prefix to INBOX and its children.
    Closes: #3083236.

version 0.8.1   - 30 September 2010

  * IMAP: fixed handling of LIST replies by the server where the mailbox name
    is not a quoted string. (Thanks Karsten Müller)

Version 0.8.0   - 9 August 2010

  * Fixed date header parsing to be precise with timezone information.  Also,
    when writing From_ line timestamps, don't use UTC but local time, without
    timezone information.
  * To determine the delivery date of a message, archivemail now looks for the
    timestamp of the latest 'Received' header before resorting to
    'Resent-Date' or 'Date'.  This should give much better results when there
    is no 'Delivery-date' header, which is still checked first.
    (Thanks Andrew Ferrier & Christian Brabandt)
    Closes: #1481316, #1764855, Debian bug #272666.
  * If present, the 'Resent-date' header now takes precedence over 'Date'.
  * IMAP: recognize when a server advertises LOGINDISABLED.
  * New option --debug-imap; this just sets imaplib.Debug, thereby dumping
    archivemail's chat with the server to stdout.
  * Fixed crash with Python 2.5 when archiving an empty maildir.
    (Thanks "Aidant")  Closes: #1878940.
  * New option --all to archive all messages in a mailbox.  Closes: #1764846.
  * Fixed a crash when archiving maildirs with --days=0. (Thanks John Goerzen)
  * IMAP: automatically add NAMESPACE prefix to a mailbox path if necessary.
  * Removed the feature to setuid to the mailbox owners when run as root.
    This was a bad idea; it's really hard to do safely, if at all possible.